fix: hz scrollbar and blue section grid

--- a/style.css
+++ b/style.css
@@ -3,8 +3,6 @@
 ----------------*/
 .ms-wrapper {
     height: 100vh;
-    width: 100vw;
-    overflow-x: hidden;
     overflow-y: auto;
 }
 
@@ -18,6 +16,7 @@ header {
 
 .ms-bg-header-row {
     background-color: white;
+    height: 100%;
 }
 
 .ms-logo img:last-child {
